# mistral-playground

./: Makefile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  main_mistral-playground.yml
app/: main.py
azure/: compose-build.yml  compose-deploy.yml
docker/: Dockerfile  docker-compose.yml  start.sh
src/: requests.py
tests/unit/: test_requests.py
