[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.poetry]
name = "mistral-playground"
version = "0.1.0"
description = "Simple playground wrapper around Mistral API."
license = "MIT"
authors = [
    "Yoann Poupart <yoann.poupart@ens-lyon.org>",
]

[[tool.poetry.source]]
name = "PyPI"
priority = "default"

[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
gradio = "^4.9.0"
mistralai = {git = "https://github.com/mistralai/client-python"}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
